# ALCUBIERRE

./: CMakeLists.txt  CMakePresets.json  README.md  install.sh
Source/: AlcubierreKnob.h  GlitchEngine.cpp  GlitchEngine.h  GranularEngine.cpp  GranularEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RingBuffer.h  WarpFieldVisualizer.h
